# Quantum_Computing_DGX_Spark

./: .gitignore  Quantum_Circuit_Simulation_Guide_DGX_Spark.txt  README.md  pyproject.toml
scripts/: git_file.sh  git_folder.sh  setup_github_repo.sh
src/: memory_scaling_analysis.py  performance_best_practices.py  quantum_15qubit_ghz.py  quantum_15qubit_qft.py  quantum_33qubit_max_capacity.py  quantum_mps_42qubit.py
